Added authorization of endpoints
