# src/routes/index.ts
@@ -1,4 +1,5 @@
 import express from "express";
+import PdfController from "../controllers/pdf";
 import StatusController from "../controllers/status";
 
 const router = express.Router();
@@ -7,6 +8,12 @@ router.get("/status", async (_req, res) => {
   const controller = new StatusController();
   const response = await controller.getMessage();
   return res.send(response);
+});
+
+router.post("/html", async (_req, res) => {
+	const controller = new PdfController();
+	const response = await controller.convertHtmlToPdf(_req.body);
+	return res.send(response);
 });
 
 export default router;
